# Test_code

./: README.md
c_call_python/: hello.py  process  process.c
cmake_test/: CMakeLists.txt  add.cpp  add.h  hello.cpp  hello.h
cuda_code/: yuv_rgb.cu
image_clarity_evaluation/: Makefile_64  main.cpp
process_test/: Makefile  main.cpp  process_test
test_appoint_gpu/: Makefile  apponit_gpu.c  apponit_gpu.d  test
test_c_cpp/: 1001_opreation_directory.c  1002_string.c  1003_class.cpp  opreation_directory  string
test_check_disk_space/: test_check_disk_space  test_check_disk_space.c
test_cpp_point/: main  main.c  main.cpp
test_get_device_info/: get_device_info  get_device_info.c
test_get_gpu_info/: cuda_get_gpu_info.cpp  cuda_get_gpu_info.d  get_gpu_info  get_gpu_info.c  get_gpu_info.d  test
test_get_local_time/: main  main.c
test_inlineAssembly/: first.asm  main  main.c
test_inlineAssembly/uchar2float/: main  main.c
